# OPK-C

./: Num_sum_mult.c  Triengle_exist.c  bank_deposit.c  fibonacci_num.c  garbage.c  heap_sort.c  insertion_sort.c  permutations.c  quadratic_equation.c  test.c
Sort_comparison2/Sort comparison/: Sort comparison.cbp  Sort comparison.depend  Sort comparison.layout  bubble_sort.c  get_time.c  get_time.h  heap_sort.c  insertion_sort.c  main.c  swap.c  swap.h
boyer_moore_find/: boyer_moore.c  boyer_moore.h
permutations/: permute.c  permute.h
sort_comparison/: CMakeLists.txt  bubble_sort.h  get_time.c  heap_sort.c  insertion_sort.c  insertion_sort.h  main.c  swap.c  swap.h
sort_comparison/sorts/bubble_sort/: bubble_sort.c
sort_comparison/sorts/heap_sort/: heap_sort.c  heap_sort.h  tempCodeRunnerFile.h
sort_comparison/sorts/insertion_sort/: insertion_sort.c  tempCodeRunnerFile.c
sorts/bubble_sort/: bubble_sort.c  bubble_sort.h
sorts/heap_sort/: heap_sort.c  heap_sort.h
sorts/insertion_sort/: insertion_sort.c  insertion_sort.h
